--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@ body {
   font-family: "Roboto", sans-serif;
   color: #0c0c0c;
   background-color: #f8f8f8;
+  
   overflow-x: hidden;
+  /* overflow:scroll; */
 }
 
 .layout_padding {
